Fixed build.bat